--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Aug 01 22:41:09 EDT 2024
-sdk.dir=/Users/thaneshn/Library/Android/sdk
+sdk.dir=C\:\\Users\\basit\\AppData\\Local\\Android\\Sdk
