--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 01 22:41:09 EDT 2024
-sdk.dir=C\:\\Users\\basit\\AppData\\Local\\Android\\Sdk
+#Sat Aug 03 15:53:50 EDT 2024
+sdk.dir=/Users/thaneshn/Library/Android/sdk
