--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Aug 04 09:43:35 EDT 2024
-sdk.dir=/Users/tientran/Library/Android/sdk
+sdk.dir=C\:\\Users\\asrit\\AppData\\Local\\Android\\Sdk
