--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 04 09:43:35 EDT 2024
-sdk.dir=C\:\\Users\\asrit\\AppData\\Local\\Android\\Sdk
+#Sun Aug 04 14:55:31 EDT 2024
+sdk.dir=/Users/thaneshn/Library/Android/sdk
