--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 05 00:55:23 EDT 2024
-sdk.dir=C\:\\Users\\asrit\\AppData\\Local\\Android\\Sdk
+#Mon Aug 05 10:30:01 EDT 2024
+sdk.dir=/Users/tientran/Library/Android/sdk
